# CarDemo

./: .gitignore  App.cpp  App.hpp  Axes.hpp  CInput.cpp  CInput.hpp  CMakeLists.txt  CarInput.cpp  CarInput.hpp  CarModel.cpp  CarModel.hpp  CarPosInfo.cpp  CarPosInfo.hpp  Scene.cpp  Scene.hpp  Sim.cpp  Sim.hpp  main.cpp
ai/: BasicController.cpp  BasicController.hpp  CompositeState.cpp  ConstantState.cpp  ControllerInterface.cpp  IdleState.cpp  LaneChangeState.cpp  States.hpp  StopSignState.cpp  TrafficLightState.cpp  TurnState.cpp  WaypointState.cpp
ai/predictSteering/: buildInfo.mat  predictSteering.cpp  predictSteering.h  predictSteering_initialize.cpp  predictSteering_initialize.h  predictSteering_terminate.cpp  predictSteering_terminate.h  predictSteering_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
btOgre/: BtOgre.cpp  BtOgreAnim.cpp  BtOgreDebug.cpp  DynamicLines.cpp
config/: resources.cfg
data/cars/: readme.txt
data/cars/360/mesh/: 360_body.mesh
data/cars/CAD/: about.txt  readme.txt
data/cars/CAD/mesh/: CAD_body.mesh  CAD_glass.mesh
data/cars/CAD/sim/: CAD.car
data/materials/: TrafficLight.material  stopsign.material
data/materials2/: car.mat
data/scene/: road.xml  roads.xml
data/scene/objects/: StopSign.mesh  TrafficLight.mesh  readme.txt
data/textures/: asphalt_ds.dds  asphalt_nh.dds  grass_green_diffusespecular.dds  grass_green_normalheight.dds
road/: Road.cpp  Road.hpp  SplineBase.cpp  SplineBase.hpp
shiny/Main/: Factory.cpp  MaterialInstance.cpp  MaterialInstancePass.cpp  MaterialInstanceTextureUnit.cpp  Platform.cpp  Preprocessor.cpp  PropertyBase.cpp  ScriptLoader.cpp  ShaderInstance.cpp  ShaderSet.cpp
terrain/: RenderConst.hpp  Scene.cpp  Scene.hpp  SceneObject.cpp  SceneObject.hpp  ShapeData.hpp
tinyxml/: CMakeLists.txt
util/: Axes.cpp  Axes.hpp  ConfigFile.cpp  ConfigFile.hpp  ToBullet.cpp  ToBullet.hpp  bucketed_hashmap.h  bucketed_hashmap.hpp
vdrift/: AABB.cpp  AABB.hpp  AABBSpacePartitioning.hpp  Bezier.cpp  Bezier.hpp  Buoyancy.cpp  Car.cpp  Car.hpp  CarAero.cpp  CarAero.hpp  CarBrake.cpp  CarBrake.hpp  CarClutch.cpp  CarClutch.hpp  CarConstants.hpp  CarControlMap.hpp  CarDifferential.cpp  CarDifferential.hpp  CarDynamics.cpp  CarDynamics.hpp  CarDynamics_Load.cpp  CarDynamics_Simulate.cpp  CarDynamics_Test.cpp  CarDynamics_Update.cpp  CarEngine.cpp  CarEngine.hpp  CarFuelTank.hpp  CarPosInfo.cpp  CarPosInfo.hpp  CarSuspension.cpp  CarSuspension.hpp  CarTire.cpp  CarTire.hpp  CarTransmission.cpp  CarTransmission.hpp  CarWheel.cpp  CarWheel.hpp  CollisionContact.cpp  CollisionContact.hpp  CollisionWorld.cpp  (+70 more)
